# sonar-client-rust

./: .gitignore  Cargo.toml  README.md
sonar-hrpc/: Cargo.toml  build.rs
sonar-hrpc/src/: lib.rs  schema.proto
src/: client.rs  collection.rs  lib.rs  subscription.rs
