[package]
name = "sonar-client-rust"
version = "0.1.0"
authors = ["Franz Heinzmann (Frando) <frando@unbiskant.org>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surf = "2.1.0"
async-std = { version = "1.8.0", features = ["attributes"] }
http-types = "2.9.0"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = { version = "1.0.60", features = ["raw_value"] }
sonar-hrpc = { path = "sonar-hrpc" }
futures = "0.3.8"
surf-sse = "1.0.0"
env_logger = "0.8.2"
log = "0.4.11"
eyre = "0.6.3"
thiserror = "1.0.22"

[workspace]
members = ["sonar-hrpc"]

# Needed until https://github.com/danburkert/prost/pull/317 is merged.
[patch.crates-io]
prost = { git = "https://github.com/Frando/prost", branch = "unknown_fields" }
prost-types = { git = "https://github.com/Frando/prost", branch = "unknown_fields" }
prost-build = { git = "https://github.com/Frando/prost", branch = "unknown_fields" }
